# Arc-Bot-shell

./: .gitignore  ARCHITECTURE.md  AUTONOMY_BOUNDARIES.md  CONTRACTS.md  DECISIONS.md  MVP_SCOPE.md  OPEN_QUESTIONS.md  README.md  SECURITY_MODEL.md  SUPERVISOR_SPEC.md  THREAT_MODEL.md  WORKER_NODE_SPEC.md  pyproject.toml  pytest.ini  workspace.lock.json
arc_bot_shell/: __init__.py  health.py
arc_guardian_spine/: __init__.py  base.py  intent_envelope.py  intent_envelope_preview.py  lima_governed_preflight.py  lima_preflight.py  preview.py
docs/: ARC_GUARDIAN_SPINE_BASE.md  ARC_V0_10_GUARDIAN_LIMA_OLLAMA.md  ARC_V0_11_WINDOWS_OPERATOR.md  ARC_V0_9_REAL_LIMA_RUNTIME_ADAPTER.md  LIMA_OFFICE_LIMA_AI_OS_CONTRACT_ASSUMPTIONS.md  LIMA_OFFICE_TEAM_PHASE2_REQUEST.md  NO_EXECUTION_SKELETON_PLAN.md  OPERATOR_CONSOLE_FOUNDATION.md  ROADMAP.md  ROADMAP_ARC_BOT_COMPLETION.md  ROADMAP_PHASE1_BUSINESS_MVP.md  ROADMAP_PHASE1_HANDOFF_PUNCH_LIST.md  ROADMAP_SCOPE_LOCK_PHASE0_PUNCH_LIST.md  ROADMAP_SCOPE_LOCK_PUNCH_LIST.md
phase0_runtime_ui_scaffold/: __init__.py  adapter.py  basic_console.py  guardian_suite_seam.py  phase2_runtime_control.py  phase_chain.py  preview.py  read_feed.py  runtime_consumer.py  runtime_control_consumer.py  runtime_control_execution.py  runtime_control_renderer.py
phase10_field_deployment/: __init__.py  package.py
phase11_pilot_readiness/: __init__.py  pilot.py
phase12_mvp_completion/: __init__.py  completion.py  runtime_implementation_gate.py
phase1_business_shell_inventory/: __init__.py  inventory.py  runtime_alignment.py
tests/: conftest.py  (+76 more)
(+205 files in other folders)
