[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-bot-shell"
version = "0.1.0"
description = "Arc Harness Shell v0.1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
include = ["arc_bot_shell*"]
