[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-bot-shell"
version = "0.1.0"
description = "Arc Harness Shell release candidate"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
arc-harness = "arc_bot_shell.harness.__main__:main"
arc-console = "arc_bot_shell.console.commands:main"
arc-health = "arc_bot_shell.health:main"

[tool.setuptools.packages.find]
include = ["arc_bot_shell*"]
